Added more helpful comments to the notebook

--- a/BrendanA_MLWorkshop.ipynb
+++ b/BrendanA_MLWorkshop.ipynb
@@ -13,6 +13,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "25ed9cd5",
+   "metadata": {},
+   "source": [
+    "This program uses locally downloaded data sets from the \"Universum\" github repo."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "e7970a88-52b1-47fd-8a60-bd77f58a15c5",
@@ -41,11 +49,19 @@
    ],
    "source": [
     "plt.figure(figsize=(15, 5))\n",
-    "plt.plot(eeg_data['PO3'])  # Replace 'Channel1' with your channel name\n",
+    "plt.plot(eeg_data['PO3'])\n",
     "plt.title('EEG Signal - PO3')\n",
     "plt.xlabel('Time')\n",
     "plt.ylabel('Amplitude')\n",
-    "plt.show()"
+    "plt.show() # Plots only the EEG signal of the PO3 channel"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d8816546",
+   "metadata": {},
+   "source": [
+    "I was successfully able to display the EEG signal of the PO3 channel."
    ]
   },
   {
@@ -116,6 +132,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "03ff7986",
+   "metadata": {},
+   "source": [
+    "I was able to visualize some EEG data. The next steps are to quality check, handle artifacts, and format the data for training by Whitening the EEG Data Using PCA."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "8b36624b-2294-4a35-baba-e32f73781b83",
@@ -139,7 +163,7 @@
     }
    ],
    "source": [
-    "print(eeg_data.isnull().sum())"
+    "print(eeg_data.isnull().sum()) # All zeros confirms there are no missing data or anomalies"
    ]
   },
   {
@@ -169,16 +193,17 @@
     "plt.xlabel('Channels')\n",
     "plt.ylabel('Variance')\n",
     "plt.title('Channel Variances')\n",
-    "plt.show()"
+    "plt.show() # This code results in an error for now\n",
+    "# The code will work when I properly convert the csv file to mne"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "5dccd62c-58e5-4979-8a51-1222152c61ec",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Currently working on converting the \"eeg_data\" csv file to a mne file to use as the \"raw\" data set."
+   ]
   }
  ],
  "metadata": {
